--- a/src/Components/Home/SCSS/Home.css
+++ b/src/Components/Home/SCSS/Home.css
@@ -124,11 +124,15 @@ p:hover {
   width: 95%;
 }
 .main .card-container .card {
-  padding: 6px 10px;
-  width: 220px;
+  padding: 6px 20px;
+  width: 210px;
   border-radius: 12px;
   font-family: "Lato";
   position: relative;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
+.main .card-container .card:hover {
+  box-shadow: none;
 }
 .main .card-container .card p:nth-child(2) {
   font-size: 22px;
