SCSS Code Cleaned

--- a/src/Components/Home/SCSS/Home.css
+++ b/src/Components/Home/SCSS/Home.css
@@ -11,57 +11,6 @@ body {
   justify-content: space-around;
 }
 
-.sidebar {
-  padding: 10px;
-  width: 15%;
-}
-
-.sidebar-inner {
-  background-color: #000;
-  height: 93vh;
-  color: #fff;
-  border-radius: 22px;
-  padding: 4% 6%;
-  position: relative;
-  padding-left: 40px;
-}
-
-.top-nav {
-  margin: 0;
-  padding: 0;
-  padding-top: 20px;
-}
-
-.top-nav p {
-  color: #ffffff;
-  line-height: 40px;
-  font-family: "Montserrat";
-}
-
-.top-nav p i {
-  padding-right: 3px;
-}
-
-.top-nav p:hover {
-  color: #346bd5;
-  cursor: pointer;
-}
-
-.footer {
-  padding: 0;
-  margin: 0;
-  position: absolute;
-  bottom: 1%;
-}
-.footer p {
-  color: #cccccc;
-}
-
-p:hover {
-  color: #346bd5;
-  cursor: pointer;
-}
-
 .main {
   width: 75%;
 }
@@ -84,6 +33,7 @@ p:hover {
 }
 .main .navbar .search:hover i {
   transform: scale(1.1);
+  transform: rotate(-30deg);
 }
 .main .navbar .search i {
   color: #9a9a9a;
@@ -122,14 +72,16 @@ p:hover {
   align-items: center;
   flex-wrap: wrap;
   width: 95%;
+  padding-top: 10px;
 }
 .main .card-container .card {
-  padding: 6px 20px;
+  padding: 18px 20px;
   width: 210px;
   border-radius: 12px;
   font-family: "Lato";
   position: relative;
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  line-height: 12px;
 }
 .main .card-container .card:hover {
   box-shadow: none;
@@ -148,14 +100,30 @@ p:hover {
 .main .card-container .card:nth-child(1) {
   background-color: #DDEFE0;
 }
+.main .card-container .card:nth-child(1):hover i {
+  transform: scale(1.2);
+  color: #346bd5;
+}
 .main .card-container .card:nth-child(2) {
   background-color: #F4ECDD;
+}
+.main .card-container .card:nth-child(2):hover i {
+  transform: scale(1.2);
+  color: #346bd5;
 }
 .main .card-container .card:nth-child(3) {
   background-color: #EFDADA;
 }
+.main .card-container .card:nth-child(3):hover i {
+  transform: scale(1.2);
+  color: #346bd5;
+}
 .main .card-container .card:nth-child(4) {
   background-color: #DEE0EF;
+}
+.main .card-container .card:nth-child(4):hover i {
+  transform: scale(1.2);
+  color: #346bd5;
 }
 
 /* Responsive Code for Mobile Devices */
@@ -163,17 +131,6 @@ p:hover {
   .home {
     flex-direction: column;
     width: 100%;
-  }
-  .sidebar {
-    width: 95%;
-    text-align: center;
-  }
-  .sidebar .footer {
-    display: none;
-  }
-  .sidebar-inner {
-    padding-left: 20px;
-    height: auto;
   }
   .main {
     width: 100%;
@@ -183,5 +140,29 @@ p:hover {
   }
   .main .navbar .right {
     gap: 10px;
+  }
+  .card-container {
+    flex-direction: column;
+    align-items: stretch;
+  }
+  .card-container .card {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+}
+@media (max-width: 768px) and (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+  .navbar .right {
+    padding-right: 0;
+  }
+  .navbar .search {
+    margin-top: 10px;
+    width: 100%;
+  }
+  .navbar .search input {
+    width: 80%;
   }
 }/*# sourceMappingURL=Home.css.map */
