--- a/src/Components/Home/SCSS/Home.scss
+++ b/src/Components/Home/SCSS/Home.scss
@@ -1,197 +1,202 @@
 * {
     transition-duration: 0.6s;
-  }
-  
-  body {
+}
+
+body {
     background-color: #f5f5f5;
-  }
-  
-  .home {
+}
+
+.home {
     display: flex;
     justify-content: space-around;
-  }
-  
-  .sidebar {
-    padding: 10px;
-    width: 15%;
-  }
-  
-  .sidebar-inner {
-    background-color: #000;
-    height: 93vh;
-    color: #fff;
-    border-radius: 22px;
-    padding: 4% 6%;
-    position: relative;
-    padding-left: 40px;
-  }
-  
-  .top-nav {
-    margin: 0;
-    padding: 0;
-    padding-top: 20px;
-  }
-  
-  .top-nav p {
-    color: #ffffff;
-    line-height: 40px;
-    font-family: 'Montserrat';
-  }
-  
-  .top-nav p i {
-    padding-right: 3px;
-  }
-  
-  .top-nav p:hover {
-    color: #346bd5;
-    cursor: pointer;
-  }
-  
-  .footer {
-    padding: 0;
-    margin: 0;
-    position: absolute;
-    bottom: 1%;
-    p {
-        color: #cccccc;
-      }
-  }
-  
-  
-  
-  p:hover {
-    color: #346bd5;
-    cursor: pointer;
-  }
-  
-  .main {
+}
+
+.main {
     width: 75%;
-    .navbar{
+
+    .navbar {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        
-        .right{
+
+        .right {
             display: flex;
             justify-content: center;
             gap: 20px;
             padding-right: 20px;
         }
-        .search{
+
+        .search {
             background-color: #fff;
             padding: 5px 8px;
             border-radius: 8px;
             font-family: 'Lato';
-            &:hover i{
+
+            &:hover i {
                 transform: scale(1.1);
+                transform: rotate(-30deg);
             }
-            i{
+
+            i {
                 color: #9a9a9a;
             }
-            input{
+
+            input {
                 border: none;
                 outline: none;
             }
         }
-        .notification{
+
+        .notification {
             padding: 4px 10px;
             border-radius: 8px;
-            &:hover{
+
+            &:hover {
                 cursor: pointer;
                 transform: scale(1.3);
             }
         }
-        .user{
+
+        .user {
             background-color: white;
             width: 25px;
             height: 25px;
             border-radius: 50%;
             align-items: center;
-            
-            img{
+
+            img {
                 width: 25px;
                 height: 25px;
                 border-radius: 50%;
-                &:hover{
+
+                &:hover {
                     transform: scale(1.3);
                     cursor: pointer;
                 }
             }
         }
-      }
+    }
 
-      .card-container{
+    .card-container {
         display: flex;
         justify-content: space-between;
         align-items: center;
         flex-wrap: wrap;
         width: 95%;
-        .card{
-            padding: 6px 20px;
+        padding-top: 10px;
+
+        .card {
+            padding: 18px 20px;
             width: 210px;
             border-radius: 12px;
             font-family: 'Lato';
             position: relative;
             box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-            &:hover{
+            line-height: 12px;
+            &:hover {
                 box-shadow: none;
             }
-            p:nth-child(2){
+
+            p:nth-child(2) {
                 font-size: 22px;
                 font-weight: 700;
                 font-family: Arial, Helvetica, sans-serif;
             }
-            i{
+
+            i {
                 position: absolute;
                 top: 10%;
                 right: 10%;
                 font-size: 30px;
             }
         }
-        .card:nth-child(1){
+
+        .card:nth-child(1) {
             background-color: #DDEFE0;
+
+            &:hover i {
+                transform: scale(1.2);
+                color: #346bd5;
+            }
         }
-        .card:nth-child(2){
+
+        .card:nth-child(2) {
             background-color: #F4ECDD;
+
+            &:hover i {
+                // transform: rotate(-20deg);
+                transform: scale(1.2);
+                color: #346bd5;
+            }
         }
-        .card:nth-child(3){
+
+        .card:nth-child(3) {
             background-color: #EFDADA;
+
+            &:hover i {
+                transform: scale(1.2);
+                color: #346bd5;
+            }
         }
-        .card:nth-child(4){
+
+        .card:nth-child(4) {
             background-color: #DEE0EF;
+
+            &:hover i {
+                transform: scale(1.2);
+                color: #346bd5;
+            }
         }
-      }
-  }
-  
-  /* Responsive Code for Mobile Devices */
-  
-  @media (max-width: 768px) {
-    .home {
-      flex-direction: column;
-      width: 100%;
     }
-  
-    .sidebar {
-      width: 95%;
-      text-align: center;
-      .footer{
-        display: none;
-      }
+}
+
+/* Responsive Code for Mobile Devices */
+
+@media (max-width: 768px) {
+    .home {
+        flex-direction: column;
+        width: 100%;
     }
 
-    .sidebar-inner {
-      padding-left: 20px;
-      height: auto;
-    }
-  
     .main {
-      width: 100%;
-      .navbar{
-        padding: 0px 6px;
-        .right{
-            gap: 10px;
+        width: 100%;
+
+        .navbar {
+            padding: 0px 6px;
+
+            .right {
+                gap: 10px;
+            }
         }
-      }
     }
-  }
-  
+
+    .card-container {
+        flex-direction: column;
+        align-items: stretch;
+
+        .card {
+            width: 100%;
+            margin-bottom: 10px;
+        }
+    }
+
+    .navbar {
+        @media (max-width: 768px) {
+            flex-direction: column;
+            flex-wrap: wrap;
+
+            .right {
+                padding-right: 0;
+            }
+
+            .search {
+                margin-top: 10px;
+                width: 100%;
+
+                input {
+                    width: 80%;
+                }
+            }
+        }
+    }
+}
