--- a/src/Components/Home/SCSS/Home.css
+++ b/src/Components/Home/SCSS/Home.css
@@ -18,6 +18,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
 }
 .main .navbar .right {
   display: flex;
@@ -65,6 +66,82 @@ body {
 .main .navbar .user img:hover {
   transform: scale(1.3);
   cursor: pointer;
+}
+.main .navbar .user-details {
+  position: fixed;
+  right: 1%;
+  top: 6%;
+  z-index: 2;
+  text-align: center;
+  min-width: 180px;
+  background-color: #1C1D1F;
+  color: #fff;
+  border-radius: 22px;
+  padding: 1% 2%;
+  line-height: 10px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+  animation: popIn 0.3s ease-in-out;
+}
+.main .navbar .user-details button {
+  border: none;
+  background-color: #FFCE56;
+  color: #000;
+  padding: 6px 10px;
+  border-radius: 4px;
+  margin-top: 20px;
+}
+.main .navbar .user-details button:hover {
+  background-color: #fff;
+  color: #000;
+  cursor: pointer;
+}
+.main .navbar .user-details h5 {
+  text-align: left;
+}
+.main .navbar .user-details .otherUsers {
+  margin-top: 20px;
+  line-height: 22px;
+}
+.main .navbar .user-details .otherUsers .userItem {
+  display: flex;
+  align-items: center;
+}
+.main .navbar .user-details .otherUsers .userItem .userIndex {
+  margin-right: 10px;
+}
+.main .navbar .user-details .otherUsers .userItem .userImage {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  margin-right: 5px;
+}
+.main .navbar .user-details .otherUsers .userItem .userName {
+  font-size: 14px;
+}
+.main .navbar .user-details .name {
+  text-transform: capitalize;
+  font-size: 18px;
+  font-weight: 600;
+  color: #FFCE56;
+}
+.main .navbar .user-details .email {
+  font-size: 14px;
+  font-weight: 400;
+}
+.main .navbar .user-details img {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+}
+@keyframes popIn {
+  0% {
+    opacity: 0;
+    transform: scale(0.3);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
 .main .card-container {
   display: flex;
@@ -125,6 +202,147 @@ body {
   transform: scale(1.2);
   color: #346bd5;
 }
+.main .Chart {
+  margin-top: 2%;
+  background-color: #fff;
+  width: 91.5%;
+  padding: 1% 2%;
+  border-radius: 22px;
+  box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
+}
+.main .Chart .line-data {
+  height: 400px;
+}
+.main .Chart .head {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.main .Chart .head .left {
+  line-height: 10px;
+}
+.main .Chart .head .left p {
+  font-weight: 700;
+  font-family: "Montserrat";
+}
+.main .Stats {
+  margin: 2% 0%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 95.2%;
+}
+.main .Stats .top-product {
+  background-color: #fff;
+  box-shadow: rgba(27, 31, 35, 0.04) 0px 1px 0px, rgba(255, 255, 255, 0.25) 0px 1px 0px inset;
+  border-radius: 22px;
+  padding: 3% 2%;
+  min-width: 480px;
+}
+.main .Stats .Schedules {
+  min-width: 480px;
+  background-color: #fff;
+  border-radius: 22px;
+  padding: 2%;
+  box-shadow: rgba(27, 31, 35, 0.04) 0px 1px 0px, rgba(255, 255, 255, 0.25) 0px 1px 0px inset;
+}
+.main .Stats .Schedules .data1 {
+  margin: 2.5% 1%;
+  line-height: 4px;
+  border-left: #9BDD7C 4px solid;
+  padding: 1px 10px;
+}
+.main .Stats .Schedules .data1 p:nth-child(1) {
+  color: #666666;
+  font-family: "Lato";
+  font-size: 16px;
+}
+.main .Stats .Schedules .data1 p:nth-child(2) {
+  color: #999999;
+  font-family: "Lato";
+  font-size: 13px;
+}
+.main .Stats .Schedules .data1 p:nth-child(3) {
+  color: #999999;
+  font-family: "Lato";
+  font-size: 12px;
+}
+.main .Stats .Schedules .data2 {
+  margin: 2.5% 1%;
+  line-height: 4px;
+  border-left: #6972C3 4px solid;
+  padding: 1px 10px;
+}
+.main .Stats .Schedules .data2 p:nth-child(1) {
+  color: #666666;
+  font-family: "Lato";
+  font-size: 16px;
+}
+.main .Stats .Schedules .data2 p:nth-child(2) {
+  color: #999999;
+  font-family: "Lato";
+  font-size: 13px;
+}
+.main .Stats .Schedules .data2 p:nth-child(3) {
+  color: #999999;
+  font-family: "Lato";
+  font-size: 12px;
+}
+
+.card,
+.Chart,
+.Stats,
+.piechart,
+.Schedules {
+  animation: popIn 0.6s ease-in-out;
+}
+
+@keyframes popIn {
+  0% {
+    opacity: 0;
+    transform: scale(0.2);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+select {
+  background-color: #fff;
+  border: none;
+  color: #858585;
+}
+select:hover {
+  color: #505050;
+  cursor: pointer;
+}
+select option {
+  background-color: #242424;
+  color: #fff;
+}
+select option:hover {
+  background-color: #346bd5;
+  color: #000;
+}
+
+.head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.head p:nth-child(1) {
+  font-weight: 700;
+  font-family: "Montserrat";
+}
+.head p:nth-child(2) {
+  color: #858585;
+  font-family: "Montserrat";
+  font-weight: 400;
+  font-size: 14px;
+}
 
 /* Responsive Code for Mobile Devices */
 @media (max-width: 768px) {
@@ -134,6 +352,17 @@ body {
   }
   .main {
     width: 100%;
+    margin: 2% 4%;
+  }
+  .main .top-product {
+    min-width: 20%;
+  }
+  .main .Schedules {
+    min-width: 20%;
+  }
+  .main .piechart {
+    width: 50%;
+    margin: 2%;
   }
   .main .navbar {
     padding: 0px 6px;
