--- a/src/Components/Sidebar/SCSS/Sidebar.scss
+++ b/src/Components/Sidebar/SCSS/Sidebar.scss
@@ -4,13 +4,33 @@
 
     .sidebar-inner {
         background-color: #000;
-        height: 93vh;
+        height: 110vh;
         color: #fff;
         border-radius: 22px;
-        padding: 4% 6%;
-        position: relative;
+        padding: 2% 6%;
+        position: fixed;
+        height: 89vh;
+        overflow: hidden;
         padding-left: 40px;
         box-shadow: rgba(17, 17, 26, 0.05) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
+
+        @keyframes blink {
+            0% {
+                opacity: 1;
+            }
+
+            50% {
+                opacity: 0;
+            }
+
+            100% {
+                opacity: 1;
+            }
+        }
+
+        span {
+            animation: blink 1s infinite;
+        }
     }
 
     .top-nav {
@@ -19,11 +39,40 @@
         padding-top: 20px;
     }
 
-    .top-nav p {
-        color: #ffffff;
-        line-height: 40px;
-        font-family: 'Montserrat';
+    .top-nav {
+        p {
+            color: #ffffff;
+            line-height: 40px;
+            font-family: 'Montserrat';
+        }
+        p:nth-child(1){
+            animation: slideFromLeftToRight 0.2s ease-in-out;
+        }
+        p:nth-child(2){
+            animation: slideFromLeftToRight 0.4s ease-in-out;
+        }
+        p:nth-child(3){
+            animation: slideFromLeftToRight 0.6s ease-in-out;
+        }
+        p:nth-child(4){
+            animation: slideFromLeftToRight 0.8s ease-in-out;
+        }
+        p:nth-child(5){
+            animation: slideFromLeftToRight 0.9s ease-in-out;
+        }
     }
+
+    @keyframes slideFromLeftToRight {
+        0% {
+            transform: translateX(-100%);
+        }
+
+        100% {
+            transform: translateX(0);
+        }
+    }
+
+    
 
     .top-nav p i {
         padding-right: 3px;
@@ -42,6 +91,17 @@
 
         p {
             color: #cccccc;
+            animation: bottomToTop 0.6s ease-in-out;
+
+        }
+        @keyframes bottomToTop {
+            0% {
+                transform: translateY(100%);
+            }
+    
+            100% {
+                transform: translateY(-100%);
+            }
         }
 
         &:hover {
@@ -55,12 +115,15 @@
     .sidebar {
         width: 95%;
         text-align: center;
-        .footer{
-          display: none;
+
+        .footer {
+            display: none;
         }
+
         .sidebar-inner {
-          padding-left: 20px;
-          height: auto;
+            padding-left: 20px;
+            height: auto;
+            position: relative;
         }
-      }
+    }
 }
