--- a/src/Components/Home/SCSS/Home.css
+++ b/src/Components/Home/SCSS/Home.css
@@ -240,14 +240,18 @@ body {
   box-shadow: rgba(27, 31, 35, 0.04) 0px 1px 0px, rgba(255, 255, 255, 0.25) 0px 1px 0px inset;
   border-radius: 22px;
   padding: 3% 2%;
-  min-width: 480px;
+  width: 45%;
 }
 .main .Stats .Schedules {
-  min-width: 480px;
+  width: 45%;
   background-color: #fff;
   border-radius: 22px;
   padding: 2%;
   box-shadow: rgba(27, 31, 35, 0.04) 0px 1px 0px, rgba(255, 255, 255, 0.25) 0px 1px 0px inset;
+}
+.main .Stats .Schedules .head p:nth-child(2):hover {
+  color: #1C1D1F;
+  cursor: pointer;
 }
 .main .Stats .Schedules .data1 {
   margin: 2.5% 1%;
@@ -292,11 +296,15 @@ body {
   font-size: 12px;
 }
 
-.card,
 .Chart,
 .Stats,
 .piechart,
-.Schedules {
+.Schedules,
+.credit {
+  animation: popIn 0.6s ease-in-out;
+}
+
+.home .card {
   animation: popIn 0.6s ease-in-out;
 }
 
@@ -344,6 +352,13 @@ select option:hover {
   font-size: 14px;
 }
 
+.credit {
+  text-align: center;
+  color: #1C1D1F;
+  opacity: 0.4;
+  font-size: 13px;
+}
+
 /* Responsive Code for Mobile Devices */
 @media (max-width: 768px) {
   .home {
@@ -354,15 +369,20 @@ select option:hover {
     width: 100%;
     margin: 2% 4%;
   }
-  .main .top-product {
-    min-width: 20%;
+  .main .line-data {
+    margin: 1% 4%;
   }
-  .main .Schedules {
-    min-width: 20%;
+  .main .Stats {
+    display: block;
+    margin: 2% 3%;
   }
-  .main .piechart {
-    width: 50%;
-    margin: 2%;
+  .main .Stats .top-product {
+    width: 90%;
+    margin: 2% 0%;
+  }
+  .main .Stats .Schedules {
+    width: 90%;
+    margin: 2% 0%;
   }
   .main .navbar {
     padding: 0px 6px;
