--- a/src/Components/Sidebar/SCSS/Sidebar.scss
+++ b/src/Components/Sidebar/SCSS/Sidebar.scss
@@ -115,7 +115,7 @@
     .sidebar {
         width: 95%;
         text-align: center;
-
+        
         .footer {
             display: none;
         }
@@ -124,6 +124,12 @@
             padding-left: 20px;
             height: auto;
             position: relative;
+            .card-container{
+                width: 100%;
+                .card{
+                    width: 100%;
+                }
+            }
         }
     }
 }
