--- a/src/Components/Home/SCSS/Home.css
+++ b/src/Components/Home/SCSS/Home.css
@@ -239,7 +239,7 @@ body {
   background-color: #fff;
   box-shadow: rgba(27, 31, 35, 0.04) 0px 1px 0px, rgba(255, 255, 255, 0.25) 0px 1px 0px inset;
   border-radius: 22px;
-  padding: 3% 2%;
+  padding: 2%;
   width: 45%;
 }
 .main .Stats .Schedules {
@@ -365,9 +365,21 @@ select option:hover {
     flex-direction: column;
     width: 100%;
   }
+  @keyframes backgroundChange {
+    0% {
+      background-position: top right;
+      animation-delay: 0.6s;
+    }
+    100% {
+      background-position: top left;
+      animation-delay: 0.6s;
+    }
+  }
   .main {
-    width: 100%;
+    width: 96%;
     margin: 2% 4%;
+    background-image: url("https://enally.in/images/bg.png");
+    animation: backgroundChange 30s infinite ease-in-out;
   }
   .main .line-data {
     margin: 1% 4%;
@@ -398,8 +410,6 @@ select option:hover {
     width: 100%;
     margin-bottom: 10px;
   }
-}
-@media (max-width: 768px) and (max-width: 768px) {
   .navbar {
     flex-direction: column;
     flex-wrap: wrap;
@@ -413,5 +423,160 @@ select option:hover {
   }
   .navbar .search input {
     width: 80%;
+  }
+}
+@media screen and (max-width: 1372px) and (min-width: 774px) {
+  .main {
+    width: 65%;
+  }
+  .main .navbar .right {
+    gap: 10px;
+    padding-right: 10px;
+  }
+  .main .navbar .search i {
+    transform: scale(1);
+    transform: rotate(0deg);
+  }
+  .main .navbar .user img:hover {
+    transform: scale(1);
+  }
+  .main .navbar .user-details {
+    top: 8%;
+    min-width: 150px;
+  }
+  .main .navbar .user-details button {
+    padding: 4px 8px;
+    margin-top: 15px;
+    font-size: 12px;
+  }
+  .main .navbar .user-details .otherUsers {
+    margin-top: 15px;
+    line-height: 18px;
+  }
+  .main .navbar .user-details .otherUsers .userItem .userIndex {
+    margin-right: 5px;
+  }
+  .main .navbar .user-details .otherUsers .userItem .userImage {
+    width: 20px;
+    height: 20px;
+    margin-right: 3px;
+  }
+  .main .navbar .user-details .otherUsers .userItem .userName {
+    font-size: 12px;
+  }
+  .main .navbar .user-details .name {
+    font-size: 15px;
+  }
+  .main .navbar .user-details .email {
+    font-size: 12px;
+  }
+  .main .navbar .user-details img {
+    width: 35px;
+    height: 35px;
+  }
+  .main .card-container .card {
+    width: 160px;
+    margin: 1% 0%;
+  }
+  .main .card-container .card p:nth-child(2) {
+    font-size: 18px;
+  }
+  .main .card-container .card i {
+    font-size: 26px;
+  }
+  .main .Chart {
+    width: 90%;
+  }
+  .main .Chart .line-data {
+    height: 300px;
+  }
+  .main .Stats .top-product,
+  .main .Stats .Schedules {
+    width: 45%;
+  }
+  .main .Stats .data1,
+  .main .Stats .data2 {
+    margin: 1.5% 1%;
+  }
+  .main .head p:nth-child(2) {
+    font-size: 12px;
+  }
+}
+@media screen and (max-width: 940px) and (min-width: 767px) {
+  .main {
+    width: 55%;
+  }
+  .main .navbar .right {
+    gap: 10px;
+    padding-right: 10px;
+  }
+  .main .navbar .search i {
+    transform: scale(1);
+    transform: rotate(0deg);
+  }
+  .main .navbar .user img:hover {
+    transform: scale(1);
+  }
+  .main .navbar .user-details {
+    top: 8%;
+    min-width: 150px;
+  }
+  .main .navbar .user-details button {
+    padding: 4px 8px;
+    margin-top: 15px;
+    font-size: 12px;
+  }
+  .main .navbar .user-details .otherUsers {
+    margin-top: 15px;
+    line-height: 18px;
+  }
+  .main .navbar .user-details .otherUsers .userItem .userIndex {
+    margin-right: 5px;
+  }
+  .main .navbar .user-details .otherUsers .userItem .userImage {
+    width: 20px;
+    height: 20px;
+    margin-right: 3px;
+  }
+  .main .navbar .user-details .otherUsers .userItem .userName {
+    font-size: 12px;
+  }
+  .main .navbar .user-details .name {
+    font-size: 15px;
+  }
+  .main .navbar .user-details .email {
+    font-size: 12px;
+  }
+  .main .navbar .user-details img {
+    width: 35px;
+    height: 35px;
+  }
+  .main .card-container .card {
+    width: 160px;
+    margin: 1% 0%;
+  }
+  .main .card-container .card p:nth-child(2) {
+    font-size: 18px;
+  }
+  .main .card-container .card i {
+    font-size: 26px;
+  }
+  .main .Chart {
+    width: 94%;
+  }
+  .main .Chart .line-data {
+    height: 300px;
+  }
+  .main .Stats .top-product,
+  .main .Stats .Schedules {
+    width: 100%;
+    margin: 2%;
+  }
+  .main .Stats .data1,
+  .main .Stats .data2 {
+    margin: 1.5% 1%;
+  }
+  .main .head p:nth-child(2) {
+    font-size: 12px;
   }
 }/*# sourceMappingURL=Home.css.map */
