--- a/src/Components/Home/SCSS/Home.scss
+++ b/src/Components/Home/SCSS/Home.scss
@@ -285,7 +285,7 @@ body {
             background-color: #fff;
             box-shadow: rgba(27, 31, 35, 0.04) 0px 1px 0px, rgba(255, 255, 255, 0.25) 0px 1px 0px inset;
             border-radius: 22px;
-            padding: 3% 2%;
+            padding: 2% ;
             width: 45%;
         }
         .Schedules {
@@ -435,10 +435,22 @@ select {
         flex-direction: column;
         width: 100%;
     }
-
+    @keyframes backgroundChange {
+        0% {
+            background-position: top right;
+            animation-delay: 0.6s;
+        }
+    
+        100% {
+            background-position: top left;
+            animation-delay: 0.6s;
+        }
+    }
     .main {
-        width: 100%;
+        width: 96%;
         margin: 2% 4%;
+        background-image: url('https://enally.in/images/bg.png');
+        animation: backgroundChange 30s infinite ease-in-out;
 
         .line-data {
             margin: 1% 4%;
@@ -479,7 +491,6 @@ select {
     }
 
     .navbar {
-        @media (max-width: 768px) {
             flex-direction: column;
             flex-wrap: wrap;
 
@@ -495,6 +506,209 @@ select {
                     width: 80%;
                 }
             }
-        }
     }
 }
+
+
+@media screen and (max-width: 1372px) and (min-width: 774px) {
+    .main {
+      width: 65%;
+  
+      .navbar .right {
+        gap: 10px;
+        padding-right: 10px;
+      }
+  
+      .navbar .search i {
+        transform: scale(1);
+        transform: rotate(0deg);
+      }
+  
+      .navbar .user img:hover {
+        transform: scale(1);
+      }
+  
+      .navbar .user-details {
+        top: 8%;
+        min-width: 150px;
+  
+        button {
+          padding: 4px 8px;
+          margin-top: 15px;
+          font-size: 12px;
+        }
+  
+        .otherUsers {
+          margin-top: 15px;
+          line-height: 18px;
+  
+          .userItem {
+            .userIndex {
+              margin-right: 5px;
+            }
+  
+            .userImage {
+              width: 20px;
+              height: 20px;
+              margin-right: 3px;
+            }
+  
+            .userName {
+              font-size: 12px;
+            }
+          }
+        }
+  
+        .name {
+          font-size: 15px;
+        }
+  
+        .email {
+          font-size: 12px;
+        }
+  
+        img {
+          width: 35px;
+          height: 35px;
+        }
+      }
+  
+      .card-container .card {
+        width: 160px;
+        margin: 1% 0%;
+  
+        p:nth-child(2) {
+          font-size: 18px;
+        }
+  
+        i {
+          font-size: 26px;
+        }
+      }
+  
+      .Chart {
+        width: 90%;
+  
+        .line-data {
+          height: 300px;
+        }
+      }
+  
+      .Stats .top-product,
+      .Stats .Schedules {
+        width: 45%;
+      }
+  
+      .Stats .data1,
+      .Stats .data2 {
+        margin: 1.5% 1%;
+      }
+  
+      .head p:nth-child(2) {
+        font-size: 12px;
+      }
+    }
+  }
+  
+
+  @media screen and (max-width: 940px) and (min-width: 767px) {
+    .main {
+      width: 55%;
+  
+      .navbar .right {
+        gap: 10px;
+        padding-right: 10px;
+      }
+  
+      .navbar .search i {
+        transform: scale(1);
+        transform: rotate(0deg);
+      }
+  
+      .navbar .user img:hover {
+        transform: scale(1);
+      }
+  
+      .navbar .user-details {
+        top: 8%;
+        min-width: 150px;
+  
+        button {
+          padding: 4px 8px;
+          margin-top: 15px;
+          font-size: 12px;
+        }
+  
+        .otherUsers {
+          margin-top: 15px;
+          line-height: 18px;
+  
+          .userItem {
+            .userIndex {
+              margin-right: 5px;
+            }
+  
+            .userImage {
+              width: 20px;
+              height: 20px;
+              margin-right: 3px;
+            }
+  
+            .userName {
+              font-size: 12px;
+            }
+          }
+        }
+  
+        .name {
+          font-size: 15px;
+        }
+  
+        .email {
+          font-size: 12px;
+        }
+  
+        img {
+          width: 35px;
+          height: 35px;
+        }
+      }
+  
+      .card-container .card {
+        width: 160px;
+        margin: 1% 0%;
+  
+        p:nth-child(2) {
+          font-size: 18px;
+        }
+  
+        i {
+          font-size: 26px;
+        }
+      }
+  
+      .Chart {
+        width: 94%;
+  
+        .line-data {
+          height: 300px;
+        }
+      }
+  
+      .Stats .top-product,
+      .Stats .Schedules {
+        width: 100%;
+        margin: 2%;
+      }
+  
+      .Stats .data1,
+      .Stats .data2 {
+        margin: 1.5% 1%;
+      }
+  
+      .head p:nth-child(2) {
+        font-size: 12px;
+      }
+    }
+  }
+  
