--- a/src/Components/Sidebar/SCSS/Sidebar.css
+++ b/src/Components/Sidebar/SCSS/Sidebar.css
@@ -12,7 +12,7 @@
   height: 89vh;
   overflow: hidden;
   padding-left: 40px;
-  box-shadow: rgba(17, 17, 26, 0.05) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 @keyframes blink {
   0% {
@@ -91,6 +91,28 @@
   cursor: pointer;
 }
 
+@keyframes backgroundChange {
+  0% {
+    background-position: top right;
+    animation-delay: 0.6s;
+  }
+  25% {
+    background-position: top left;
+    animation-delay: 0.6s;
+  }
+  50% {
+    background-position: top center;
+    animation-delay: 0.6s;
+  }
+  75% {
+    background-position: right center;
+    animation-delay: 0.6s;
+  }
+  100% {
+    background-position: right bottom;
+    animation-delay: 0.6s;
+  }
+}
 @media (max-width: 768px) {
   .sidebar {
     width: 95%;
@@ -103,11 +125,7 @@
     padding-left: 20px;
     height: auto;
     position: relative;
-  }
-  .sidebar .sidebar-inner .card-container {
-    width: 100%;
-  }
-  .sidebar .sidebar-inner .card-container .card {
-    width: 100%;
+    background-image: url("https://enally.in/images/new/servicesbg.png");
+    animation: backgroundChange 12s infinite ease-in-out;
   }
 }/*# sourceMappingURL=Sidebar.css.map */
